logs/dag_id=GlobalSuperStore_dw_etl/run_id=manual__2025-06-14T083228.782853+0000/task_id=transform.transform_dim_customers/attempt=1.log
[2025-06-14T08:33:24.626+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2025-06-14T08:33:24.698+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: GlobalSuperStore_dw_etl.transform.transform_dim_customers manual__2025-06-14T08:32:28.782853+00:00 [queued]>
[2025-06-14T08:33:24.706+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: GlobalSuperStore_dw_etl.transform.transform_dim_customers manual__2025-06-14T08:32:28.782853+00:00 [queued]>
[2025-06-14T08:33:24.707+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2025-06-14T08:33:24.723+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): transform.transform_dim_customers> on 2025-06-14 08:32:28.782853+00:00
[2025-06-14T08:33:24.730+0000] {standard_task_runner.py:63} INFO - Started process 746 to run task
[2025-06-14T08:33:24.735+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'GlobalSuperStore_dw_etl', 'transform.transform_dim_customers', 'manual__2025-06-14T08:32:28.782853+00:00', '--job-id', '7', '--raw', '--subdir', 'DAGS_FOLDER/global_superstore_dw_etl.py', '--cfg-path', '/tmp/tmp7aw65ps_']
[2025-06-14T08:33:24.737+0000] {standard_task_runner.py:91} INFO - Job 7: Subtask transform.transform_dim_customers
[2025-06-14T08:33:24.779+0000] {task_command.py:426} INFO - Running <TaskInstance: GlobalSuperStore_dw_etl.transform.transform_dim_customers manual__2025-06-14T08:32:28.782853+00:00 [running]> on host 180404561e2e
[2025-06-14T08:33:24.853+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='GlobalSuperStore_dw_etl' AIRFLOW_CTX_TASK_ID='transform.transform_dim_customers' AIRFLOW_CTX_EXECUTION_DATE='2025-06-14T08:32:28.782853+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-06-14T08:32:28.782853+00:00'
[2025-06-14T08:33:24.854+0000] {taskinstance.py:430} INFO - ::endgroup::
[2025-06-14T08:33:25.263+0000] {base.py:84} INFO - Using connection ID 'postgres' for task execution.
[2025-06-14T08:33:25.269+0000] {base.py:84} INFO - Using connection ID 'postgres' for task execution.
[2025-06-14T08:33:25.275+0000] {base.py:84} INFO - Using connection ID 'postgres' for task execution.
[2025-06-14T08:33:25.289+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.10/site-packages/***/providers/common/sql/hooks/sql.py:263 UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.
[2025-06-14T08:33:25.290+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2025-06-14T08:33:25.291+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.10/site-packages/pandas/io/sql.py", line 2018, in execute
    cur.execute(*args, **kwargs)
psycopg2.errors.SyntaxError: syntax error at or near "`"
LINE 1: SELECT * FROM `Customer`
                      ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/transform_dim_customers.py", line 14, in transform_dim_customers
    df = staging_operator.get_data_to_pd("SELECT * FROM `Customer`")
  File "/opt/airflow/plugins/postgresql_operator.py", line 15, in get_data_to_pd
    return self.hook.get_pandas_df(sql)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 263, in get_pandas_df
    return psql.read_sql(sql, con=conn, params=parameters, **kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/pandas/io/sql.py", line 564, in read_sql
    return pandas_sql.read_query(
  File "/home/airflow/.local/lib/python3.10/site-packages/pandas/io/sql.py", line 2078, in read_query
    cursor = self.execute(*args)
  File "/home/airflow/.local/lib/python3.10/site-packages/pandas/io/sql.py", line 2030, in execute
    raise ex from exc
pandas.errors.DatabaseError: Execution failed on sql 'SELECT * FROM `Customer`': syntax error at or near "`"
LINE 1: SELECT * FROM `Customer`
                      ^

[2025-06-14T08:33:25.309+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=GlobalSuperStore_dw_etl, task_id=transform.transform_dim_customers, run_id=manual__2025-06-14T08:32:28.782853+00:00, execution_date=20250614T083228, start_date=20250614T083324, end_date=20250614T083325
[2025-06-14T08:33:25.321+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 7 for task transform.transform_dim_customers (Execution failed on sql 'SELECT * FROM `Customer`': syntax error at or near "`"
LINE 1: SELECT * FROM `Customer`
                      ^
; 746)
[2025-06-14T08:33:25.349+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2025-06-14T08:33:25.361+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-06-14T08:33:25.365+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
